--- a/hotel-resto/src/App.css
+++ b/hotel-resto/src/App.css
@@ -1,3 +1,31 @@
+body {
+  background-color: #61dafb;
+}
+
+#logo {
+  width: 65%;
+  height: auto;
+  padding-top: 10px;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 5px 5px;
+  /* position: sticky; */
+}
+
+nav a {
+  text-decoration: none;
+  color: black;
+  /* font-size: 18px; */
+}
+a:hover {
+  text-decoration: underline;
+}
+
 .App {
   text-align: center;
 }
